feat: ffi crate